@@ -1,4 +1,12 @@
 ChangeLog
+
+20080907 - [dj] * Use new initd-tools package to activate scripts.
+                * $syslog and modules services cannot be a hard dependencies
+                  due to minimal install target.
+                * Store bootlog date in UTC.
+                * Added hard deps to network script for local_fs, swap, and
+                  localnet (account for /usr at network instead of $remote_fs).
+
 20080831 - [dj] * Corrected more, and minimized dependencies in scripts.
                 * Don't try to write to bootlog in 0 and 6.
                 * Use /etc/rcS.d instead of /etc/rcsysinit.d - added
